--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,9 @@ message("found Boost_VERSION: ${Boost_VERSION}")
 if(Boost_VERSION GREATER 106500)
   message(STATUS "New boost_numpy detected, no need to use this piece of code!")
   find_package(Boost REQUIRED COMPONENTS "numpy")
+else()
+  find_package(NumPy REQUIRED)
 endif()
-find_package(NumPy REQUIRED)
 
 message(STATUS "PYTHON include dirs = ${PYTHON_INCLUDE_DIRS}")
 message(STATUS "PYTHON libs         = ${PYTHON_LIBRARIES}")
